tests/fixtures/invalid/float_gt_bytes.py
# Cannot compare with > Float and Bytes
x: bool = 1.0 > b"hello"
